--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# Data Ignore
+code/data/nyuv2
+code/data/cityscapes
+
 # Distribution / packaging
 .Python
 build/
